# nexgen_tray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: DEVLOG.md  PROJECT_MEMORY.md  UTILITIES_IDEAS.md
githooks/: post-commit
scripts/: build.sh  bump-submodules.ps1  bump-submodules.sh  install-githooks.ps1  install-githooks.sh  run.sh  update.sh
src/: main.cpp
